2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module):
	Allocate phdrs with malloc, not on stack. free in finish.
	Allocate dyn with malloc, not on stack, free after use.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* find-debuginfo.c (find_debuginfo_in_path): malloc or strdup,
	instead of alloca or strdupa, local strings of unknown size.
	Call free before return.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* dwfl_build_id_find_elf.c (__libdwfl_open_by_build_id): Return
	error when id_len too small or too large. strdup, not strdupa,
	and free path when done.

2015-05-19  Mark Wielaard  <mjw@redhat.com>

	* elf-from-memory.c (elf_from_remote_memory): Don't allocate all
	phdrs on the stack. Allocate with malloc and free when done.

2015-05-19  Mark Wielaard  <mjw@redhat.com>

	* linux-kernel-modules.c (dwfl_linux_kernel_find_elf): malloc and
	free alternate_name.

2015-05-19  Mark Wielaard  <mjw@redhat.com>

	* linux-kernel-modules.c (dwfl_linux_kernel_report_offline): Don't
	stack allocate name. Only change chars up to suffix.

2015-05-18  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_prelink_address_sync): Allocate
	phdrs and shdrs unions with malloc, not alloca. Free after use.

2015-05-18  Mark Wielaard  <mjw@redhat.com>

	* derelocate.c (cache_sections): Allocate temporary newrefs and
	sortrefs with malloc, not alloca. Always free them on return.

2015-05-07  Mark Wielaard  <mjw@redhat.com>

	* cu.c (intern_cu): Check for EOF and check cuoff points to a real
	Dwarf_Die before interning. Explicitly check EOF is expected.

2015-05-05  Mark Wielaard  <mjw@redhat.com>

	* dwfl_lineinfo.c (dwfl_lineinfo): Check info->file is valid.

2015-05-06  Roland McGrath  <roland@hack.frob.com>

	* dwfl_error.c (struct msgtable): Break type definition out of
	the 'msgtable' initializer.
	(msgtable): Make it a union of struct msgtable and a char array.