@@ -1,5 +1,10 @@
 2015-05-22  Mark Wielaard  <mjw@redhat.com>
 
+	* link_map.c (dwfl_link_map_report): Allocate phdrs and dyn with
+	malloc instead of stack allocating. Call free when done with data.
+
+2015-05-22  Mark Wielaard  <mjw@redhat.com>
+
 	* dwfl_segment_report_module.c (dwfl_segment_report_module):
 	Allocate phdrs with malloc, not on stack. free in finish.
 	Allocate dyn with malloc, not on stack, free after use.
